# valorian-selecao-ia

./: LICENSE  README.md  coleta-processed.pkl  pyproject.toml  valorian_selecao_ia_dados.ipynb  valorian_selecao_ia_modelos.ipynb
