[tool.poetry]
name = "teste_valorian"
version = "0.1.0"
description = ""
authors = ["Arthur Alvim <afmalvim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
pyarrow = "^11.0.0"
sklearn = "^0.0.post2"
scikit-learn = "^1.2.2"
xgboost = "^1.7.4"
imblearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
